# autobiographer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  analysis_utils.py  autobiographer-expansion-brief.md  autobiographer.py  default_assumptions.json.example  export_html.py  find_checkin.py  local_settings.json.example  pyproject.toml  record_flythrough.py  requirements.txt  visualize.py
.claude/: settings.json
.github/workflows/: ci.yml  code-review.yml  python-tests.yml  release.yml
.streamlit/: config.toml
assets/: us-states-polygons.geojson
components/: plugin_config.py  share.py  sidebar.py  theme.py
core/: broker.py  fetch_utils.py  local_settings.py
notebooks/: autobiographer_analysis.ipynb
pages/: artist_geography.py  beer.py  culture.py  data_sources.py  dining_soundtrack.py  discovery_zones.py  fitness.py  geo_explorer.py  holiday_soundtrack.py  in_transit.py  insights.py  late_night.py  life_in_chapters.py  listening_lifestyle.py  music.py  music_atlas.py  music_map_america.py  overview.py  places.py  vacation_mode.py  weekend_effect.py  yearly_retrospective.py
plugins/sources/: __init__.py  base.py
plugins/sources/assumptions/: README.md  loader.py
plugins/sources/lastfm/: README.md  loader.py
plugins/sources/swarm/: README.md  loader.py
tests/: test_analysis_utils.py  test_artist_geography.py  test_autobiographer.py  test_broker.py  test_caching.py  test_data_sources_ux.py  test_dining_soundtrack.py  test_discovery_zones.py  test_export_html.py  test_fetch_utils.py  test_find_checkin.py  test_geo_explorer.py  test_holiday_soundtrack.py  test_in_transit.py  test_late_night.py  test_life_in_chapters.py  test_listening_lifestyle.py  test_local_settings.py  test_location_fallbacks.py  test_music_atlas.py  test_music_map_america.py  test_record_flythrough.py  test_source_plugins.py  test_swarm_integration.py  test_vacation_mode.py  test_visualize.py  test_weekend_effect.py  test_yearly_retrospective.py
tools/: add_audio_to_video.py  code_review_agent.py  generate_mockup.py
