[project]
name = "autobiographer"
version = "0.1.0"
description = "A personal data platform for reconstructing the narrative arc of your life from digital traces."
requires-python = ">=3.9"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = ""
upload_to_pypi = false
commit_message = "chore(release): {version} [skip ci]"
tag_format = "v{version}"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "style", "test", "chore", "ci", "build"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.ruff]
target-version = "py39"
line-length = 100
exclude = ["venv", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "UP",  # pyupgrade
]
ignore = [
    "S101",  # assert statements (used in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "B"]
"record_flythrough.py" = ["E501"]  # long lines are embedded JS inside f-strings

[tool.mypy]
python_version = "3.9"
files = ["autobiographer.py", "analysis_utils.py", "visualize.py", "record_flythrough.py", "find_checkin.py", "tools"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["streamlit.*", "pydeck.*", "plotly.*", "geopandas.*", "moviepy.*", "imageio.*", "playwright.*"]
ignore_errors = true
follow_imports = "skip"

[tool.bandit]
exclude_dirs = ["venv", "tests"]
skips = ["B101"]  # assert statements
